docs: fix playground styles in dark mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -2,7 +2,7 @@
   --c-bg-output: #fafbfc;
 }
 
-html.dark {
+[data-theme='dark'] {
   --c-bg-output: #272b2f;
 }
 
